# biocheck-platform-verify

./: .dockerignore  .gitignore  CONTINUATION_BRIEF.md  Dockerfile.verify-core  PROJECT_STATUS.md  PUSH_AND_DEPLOY.md  README.md  docker-compose.yml  pyproject.toml
biocheck_engine/: __init__.py  adapters.py  api.py  api_context.py  audit.py  crypto.py  demo.py  dev_fixture_adapter.py  device_trust.py  documents.py  location.py  model_registry.py  orchestration.py  policy.py  service.py  stepup.py  types.py  vault.py
docs/: ARCHITECTURE.md  BASELINE_AUDIT.md  BUILD_HANDOVER.md  CERTIFICATION_ROADMAP.md  DEPLOYMENT.md  DPIA_TEMPLATE.md  ENTERPRISE_ARCHITECTURE.md  FINGERPRINT_BUILD_STATUS.md  FP_MISSION_PACK.md  INCIDENT_RESPONSE.md  KMS_BUILD_STATUS.md  KNOWN_LIMITATIONS.md  MODEL_GOVERNANCE.md  OPERATIONS_RUNBOOK.md  PILOT_READINESS_REPORT.md  PRIVACY_AND_RETENTION.md  PRODUCTION_RELEASE_CHECKLIST.md  SECURITY_BASELINE.md  SEETAFACE6_BUILD_STATUS.md  SEETAFACE6_INTEGRATION.md  THREAT_MODEL.md  VERCEL_DEPLOY.md  VERIFY_CORE_DEPLOYMENT.md
fly/: README.md  fly.fp-sidecar.toml  fly.verify-core.toml
model-manifest/: seetaface6-official-2026-07-14.json
native-patches/: 0001-tennis-gcc13-cstdlib.patch
platform/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: register_fp_sidecar.py  summarise_pilot_results.py  verify_model_manifest.py
sidecar-fingerprint/: Dockerfile  README.md  fly.toml  pom.xml
sidecar-fingerprint-py/: README.md  matcher.py  server.py  test_conformance.py
(+119 files in other folders)
