[project]
name = "biocheck-verify"
version = "0.1.0"
description = "Privacy-first enterprise 1:1 biometric verification core"
requires-python = ">=3.11"
dependencies = ["cryptography>=42", "numpy>=1.26", "pydantic>=2.0"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
onnx = ["onnxruntime>=1.17", "opencv-python-headless>=4.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
